# uwuhi

./: Cargo.toml  README.md  TODO.txt
.github/workflows/: ci.yaml
examples/: dns-client.rs  mdns-advertise.rs  mdns-client.rs  mdns-discover.rs  tap.rs
src/: error.rs  hex.rs  lib.rs  name.rs  num.rs  packet.rs  resolver.rs  service.rs  tap.rs
src/packet/: decoder.rs  encoder.rs  error.rs  macros.rs  name.rs  records.rs  ref_or_val.rs  section.rs
src/service/: advertising.rs  discovery.rs
uwuhi-async/: Cargo.toml
uwuhi-async/src/: lib.rs  resolver.rs  service.rs
uwuhi-async/src/service/: advertising.rs  discovery.rs
