[package]
name = "uwuhi"
version.workspace = true
edition = "2021"
description = "mDNS Service Discovery implementation"
license = "0BSD"
repository = "https://github.com/SludgePhD/uwuhi"

[dependencies]
bitflags = "1.3.2"
zerocopy = "0.6.1"
socket2 = "0.4.4"
log = "0.4.16"
smallvec = { version = "1.9.0", features = ["const_new"] }

[dev-dependencies]
env_logger = "0.10.0"
if-addrs = "0.8.0"

[workspace]
members = [".", "uwuhi-async"]
package.version = "0.3.0"
dependencies.uwuhi = { version = "0.3.0", path = "." }
# update these versions together ^
