[workspace]
members = [".", "uwuhi-async"]
package.version = "0.4.1"
dependencies.uwuhi = { version = "0.4.1", path = "." }
# update these versions together ^

[package]
name = "uwuhi"
version.workspace = true
edition = "2021"
description = "mDNS Service Discovery implementation"
license = "0BSD"
repository = "https://github.com/SludgePhD/uwuhi"

[dependencies]
bitflags = "2.3.3"
bytemuck = { version = "1.14.0", features = ["derive"] }
socket2 = "0.5.3"
log = "0.4.16"

[dev-dependencies]
env_logger = "0.10.0"
if-addrs = "0.10.1"
expect-test = "1.4.1"
