[workspace]
members = [".", "uwuhi-async"]
package.categories = ["network-programming"]
package.keywords = ["avahi", "multicast", "dns", "dns-sd"]
package.license = "0BSD"
package.repository = "https://github.com/SludgePhD/uwuhi"
package.edition = "2021"

package.version = "0.4.3"
dependencies.uwuhi = { version = "0.4.3", path = "." }
# update these versions together ^

[package]
name = "uwuhi"
description = "mDNS Service Discovery implementation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
bitflags = "2.3.3"
bytemuck = { version = "1.14.0", features = ["derive"] }
socket2 = "0.5.3"
log = "0.4.16"

[dev-dependencies]
env_logger = "0.11.3"
if-addrs = "0.12.0"
expect-test = "1.4.1"
