[package]
name = "uwuhi-async"
description = "Async mDNS Service Discovery implementation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
uwuhi.workspace = true
log = "0.4.17"
async-io = "2.3.2"
futures-lite = "2.3.0"
